--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/three": "^9.4.3",
     "@react-three/drei": "^8.10.6",
     "@react-three/fiber": "^7.0.26",
     "@react-three/xr": "^3.4.0",
